# libgbm

./: Makefile.am  configure.ac
backends/dri/: gbm_dri.c  gbm_driint.h
